                 TeamTalk
----------------------------------------------
Version 5.3, unreleased
Default Qt client
- Abuse prevention tab in user account administration
Accessible Windows client:
- Abuse prevention tab in user account administration
- Tell operator state using Ctrl+G
Server:
- Fixed brute force login prevention using ban feature
- Limit number of issued commands by clients

Version 5.2.4, released 2017/11/08
iOS client:
- Updated UI to iOS 11
- Corrected accessibility hint for TX button
Android client:
- Stay connected after screen dims
- Set voice activation level on main screen
- Toggle between voice activation and microphone gain
- Disable voice communication during phone call
- Status bar notification for initiated connection
- Ask before deleting server entry

Version 5.2.3, released 2017/06/01
Default Qt client:
- Fixed crash issue when receiving multiple voice streams
Accessible Windows client:
- Fixed crash issue when receiving multiple voice streams
- Two new sound events for transmit start/suspended
iOS client:
- Fixed crash issue when receiving multiple voice streams
Android client:
- Fixed crash issue when receiving multiple voice streams

Version 5.2.2, released 2017/05/08
Server:
- Exclusive voice/media file access in "Allow only one user to talk"/"No Interruptions" channel
Default Qt client:
- Virtual sound device for no input/output sound device
Accessible Windows client:
- Queue system when channel type is "Allow only one user to talk"
- Sound events for:
  - Voice activation feature enabled/disabled
  - Voice activation triggered
  - Transmit ready/suspended in channel type "Allow only one user to talk" (requires server v5.2.2)
- Close private text message dialog by pressing escape
- Virtual sound device for no input/output sound device
- Sound events are played fully, i.e. new sound events do not cancel currently played
- Added Arabic language
iOS client:
- Added Arabic language (Israel)
- Sound events for: